--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
                         <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                            <li class="active"><a href="index.html">Home</a></li>
                            <li class="has-children">
-                              <a href="single.html">Gallery</a>
+                              <a href="events.html">Gallery</a>
                               <ul class="dropdown">
                                  <li><a href="potraits.html">Potraits</a></li>
                                  <li><a href="food.html">Food</a></li>
@@ -50,7 +50,7 @@
                                  <li><a href="clothing.html">Clothing</a></li>
                                  <li><a href="architecture-interiors.html">Architecture & Interiors</a></li>
                                  <li><a href="travel.html">Travel</a></li>
-                                 <li><a href="events.html">Events</a></li>
+                                 <li class="active"><a href="events.html">Events</a></li>
                                  <li><a href="kids.html">Kids</a></li>
                                  <li><a href="sports.html">Sports</a></li>
                               </ul>
