--- a/products.html
+++ b/products.html
@@ -40,13 +40,13 @@
                   <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                      <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                         <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                           <li class="active"><a href="index.html">Home</a></li>
+                           <li><a href="index.html">Home</a></li>
                            <li class="has-children">
-                              <a href="single.html">Gallery</a>
+                              <a href="products.html">Gallery</a>
                               <ul class="dropdown">
                                  <li><a href="potraits.html">Potraits</a></li>
                                  <li><a href="food.html">Food</a></li>
-                                 <li><a href="products.html">Products</a></li>
+                                 <li class="active"><a href="products.html">Products</a></li>
                                  <li><a href="clothing.html">Clothing</a></li>
                                  <li><a href="architecture-interiors.html">Architecture & Interiors</a></li>
                                  <li><a href="travel.html">Travel</a></li>
