--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
                         <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                            <li><a href="index.html">Home</a></li>
                            <li class="has-children">
-                              <a href="single.html">Gallery</a>
+                              <a href="potraits.html">Gallery</a>
                               <ul class="dropdown">
                                 <li><a href="potraits.html">Potraits</a></li>
                                 <li><a href="food.html">Food</a></li>
