--- a/contact.html
+++ b/contact.html
@@ -125,8 +125,11 @@
                   </div>
                   <div class="col-lg-3 ml-auto">
                      <div class="mb-3">
-                        <p class="mb-0 font-weight-bold text-white">Address</p>
-                        <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+                        <p class="mb-0 font-weight-bold text-white">Location</p>
+                        <p class="mb-4">Noida,
+                           <br>Delhi
+                        </p>
+
                         <p class="mb-0 font-weight-bold text-white">Phone</p>
                         <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
                         <p class="mb-0 font-weight-bold text-white">Email Address</p>
