Added Contact Number and email address

--- a/contact.html
+++ b/contact.html
@@ -130,10 +130,10 @@
                            <br>Delhi
                         </p>
 
-                        <p class="mb-0 font-weight-bold text-white">Phone</p>
-                        <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+                        <p class="mb-0 font-weight-bold text-white">Phone/Whatsapp</p>
+                        <p class="mb-4"><a href="#">+91-7042088846</a></p>
                         <p class="mb-0 font-weight-bold text-white">Email Address</p>
-                        <p class="mb-0"><a href="#"><span class="__cf_email__" data-cfemail="f38a9c8681969e929a9fb3979c9e929a9ddd909c9e">[email&#160;protected]</span></a></p>
+                        <p class="mb-0"><a href="mailto:info.adityabansal@gmail.com">info.adityabansal@gmail.com</a></p>
                      </div>
                   </div>
                </div>
