--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
    <head>
       <title>Aditya Bansal &mdash; Photographer</title>
       <link rel = "icon" href = 
@@ -87,7 +86,7 @@
                   </div>
                </div>
                <div class="row justify-content-around">
-                  <div class="col-md-4 image-wrap-2">
+                  <div class="col-md-4">
                      <img src="images/about-me-pic.jpg" alt="Images" class="img-fluid about-me-pic">
                   </div>
                   <div class="col-md-4">
@@ -140,7 +139,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
               </p>
             </div>
          </div>
@@ -175,5 +174,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
