--- a/food.html
+++ b/food.html
@@ -86,53 +86,53 @@
                   </div>
                </div>
                <div class="row" id="lightgallery">
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/burger.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-                     <a href="#"><img src="images/Food/burger.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/burger.jpg">
+                     <a href="#"><img src="images/Food/burger.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/dorito.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
+                  <!-- <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/dorito.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
                      <a href="#"><img src="images/Food/dorito.jpg" alt="IMage" class="img-fluid"></a>
+                  </div> -->
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/grilled cheese.jpg">
+                     <a href="#"><img src="images/Food/grilled cheese.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/grilled cheese.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-                     <a href="#"><img src="images/Food/grilled cheese.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0269.jpg">
+                     <a href="#"><img src="images/Food/IMG_0269.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0269.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis quae iusto omnis praesentium labore tempore eligendi quo corporis sapiente.</p>">
-                     <a href="#"><img src="images/Food/IMG_0269.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0389-1.jpg">
+                     <a href="#"><img src="images/Food/IMG_0389-1.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0389-1.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, voluptatum voluptate tempore aliquam, dolorem distinctio. In quas maiores tenetur sequi.</p>">
-                     <a href="#"><img src="images/Food/IMG_0389-1.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0435.jpg">
+                     <a href="#"><img src="images/Food/IMG_0435.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0435.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum culpa blanditiis illum, voluptatum iusto quisquam mollitia debitis quaerat maiores?</p>">
-                     <a href="#"><img src="images/Food/IMG_0435.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0473.jpg">
+                     <a href="#"><img src="images/Food/IMG_0473.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0473.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores similique impedit possimus, laboriosam enim at placeat nihil voluptatibus voluptate hic!</p>">
-                     <a href="#"><img src="images/Food/IMG_0473.jpg" alt="IMage" class="img-fluid"></a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0502-2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam vitae sed cum mollitia itaque soluta laboriosam eaque sit ratione, aliquid.</p>">
+                  <!-- <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0502-2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam vitae sed cum mollitia itaque soluta laboriosam eaque sit ratione, aliquid.</p>">
                      <a href="#"><img src="images/Food/IMG_0502-2.jpg" alt="IMage" class="img-fluid"></a>
+                  </div> -->
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0503.jpg">
+                     <a href="#"><img src="images/Food/IMG_0503.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_0503-2.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque officiis magnam, facilis nam eos perspiciatis eligendi pariatur numquam debitis quos!</p>">
-                     <a href="#"><img src="images/Food/IMG_0503-2.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_7996.jpg">
+                     <a href="#"><img src="images/Food/IMG_7996.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_7996.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quia illo voluptatibus numquam inventore, ab asperiores molestiae distinctio atque nihil.</p>">
-                     <a href="#"><img src="images/Food/IMG_7996.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9013.jpg">
+                     <a href="#"><img src="images/Food/IMG_9013.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9013.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt unde placeat obcaecati sapiente illum, fuga nostrum necessitatibus delectus maiores magnam.</p>">
-                     <a href="#"><img src="images/Food/IMG_9013.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9027.jpg">
+                     <a href="#"><img src="images/Food/IMG_9027.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9027.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas dignissimos non consectetur. Facilis totam, explicabo nam iure! Veniam modi, molestiae.</p>">
-                     <a href="#"><img src="images/Food/IMG_9027.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9497.jpg" >
+                     <a href="#"><img src="images/Food/IMG_9497.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/IMG_9497.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias minus voluptatibus inventore odio. Iure amet nesciunt a, officia quo ex.</p>">
-                     <a href="#"><img src="images/Food/IMG_9497.jpg" alt="IMage" class="img-fluid"></a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/mexilla.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium illum consectetur dolorum consequuntur sint doloribus eveniet deleniti! Illo, quibusdam, earum.</p>">
+                  <!-- <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/mexilla.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium illum consectetur dolorum consequuntur sint doloribus eveniet deleniti! Illo, quibusdam, earum.</p>">
                      <a href="#"><img src="images/Food/mexilla.jpg" alt="IMage" class="img-fluid"></a>
+                  </div> -->
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item " data-aos="fade" data-src="images/Food/pasta.jpg">
+                     <a href="#"><img src="images/Food/pasta.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/pasta.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad iure, inventore asperiores, cupiditate optio dignissimos labore quidem totam. Dignissimos.</p>">
-                     <a href="#"><img src="images/Food/pasta.jpg" alt="IMage" class="img-fluid"></a>
-                  </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Food/sandwich dorito.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam temporibus totam similique provident delectus quos fugiat officia earum nisi voluptatibus?</p>">
-                     <a href="#"><img src="images/Food/sandwich dorito.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
+                     <a href="#"><img src="images/Food/IMG_0502.jpg" class="img-fluid"></a>
                   </div>
                </div>
             </div>
@@ -140,7 +140,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
@@ -175,5 +175,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
