--- a/travel.html
+++ b/travel.html
@@ -87,14 +87,14 @@
                   </div>
                </div>
                <div class="row" id="lightgallery">
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/IMG_83255.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-                     <a href="#"><img src="images/Travel/IMG_83255.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/IMG_83255.jpg">
+                     <a href="#"><img src="images/Travel/IMG_83255.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/Screenshot_20190802-221204~2.png" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
-                     <a href="#"><img src="images/Travel/Screenshot_20190802-221204~2.png" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/Screenshot_20190802-221204~2.png">
+                     <a href="#"><img src="images/Travel/Screenshot_20190802-221204~2.png" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/starrrs.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-                     <a href="#"><img src="images/Travel/starrrs.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Travel/starrrs.jpg">
+                     <a href="#"><img src="images/Travel/starrrs.jpg" class="img-fluid"></a>
                   </div>
                </div>
             </div>
@@ -102,7 +102,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
@@ -137,5 +137,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
