--- a/architecture-interiors.html
+++ b/architecture-interiors.html
@@ -86,26 +86,59 @@
                   </div>
                </div>
                <div class="row" id="lightgallery">
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_5803.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_5803.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_5803.jpg">
+                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_5803.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_5808.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_5808.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_5808.jpg">
+                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_5808.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_6189.jp" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_6189.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Copy of IMG_6189.jp">
+                     <a href="#"><img src="images/Architecture _ Interiors/Copy of IMG_6189.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_5800.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis quae iusto omnis praesentium labore tempore eligendi quo corporis sapiente.</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/IMG_5800.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_5800.jpg">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_5800.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_5801.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, voluptatum voluptate tempore aliquam, dolorem distinctio. In quas maiores tenetur sequi.</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/IMG_5801.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_5801.jpg">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_5801.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_9583.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum culpa blanditiis illum, voluptatum iusto quisquam mollitia debitis quaerat maiores?</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/IMG_9583.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/IMG_9583.jpg">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_9583.jpg" class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores similique impedit possimus, laboriosam enim at placeat nihil voluptatibus voluptate hic!</p>">
-                     <a href="#"><img src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0544.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0545.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0548.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0550.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0558.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0560.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0566.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0568.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0569.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0571.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Architecture _ Interiors/Screenshot_20190802-221157~2.png">
+                     <a href="#"><img src="images/Architecture _ Interiors/IMG_0573.jpg" class="img-fluid"></a>
                   </div>
                </div>
             </div>
@@ -113,7 +146,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
@@ -148,5 +181,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
