--- a/contact.html
+++ b/contact.html
@@ -130,8 +130,8 @@
                            <br>Delhi
                         </p>
 
-                        <p class="mb-0 font-weight-bold text-white">Phone/Whatsapp</p>
-                        <p class="mb-4"><a href="#">+91-7042088846</a></p>
+                        <p class="mb-0 font-weight-bold text-white">Instagram</p>
+                        <p class="mb-4"><a href="https://www.instagram.com/adyvisuals/"  target="_blank">@adyvisuals</a>
                         <p class="mb-0 font-weight-bold text-white">Email Address</p>
                         <p class="mb-0"><a href="mailto:info.adityabansal@gmail.com">info.adityabansal@gmail.com</a></p>
                      </div>
@@ -142,7 +142,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
