--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2 class="mb-3">Kids</h2>
                         <a href="kids.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
                      </div>
-                     <img src="images/Kids/IMG_9412.jpg" alt="Image" class="img-fluid">
+                     <img src="images/Kids/IMG_5337.jpg" alt="Image" class="img-fluid">
                   </div>
                </div>
                <div class="col-lg-4">
@@ -162,7 +162,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
