--- a/kids.html
+++ b/kids.html
@@ -86,35 +86,35 @@
                   </div>
                </div>
                <div class="row" id="lightgallery">
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_4871.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor doloremque hic excepturi fugit, sunt impedit fuga tempora, ad amet aliquid?</p>">
-                     <a href="#"><img src="images/Kids/IMG_4871.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Kids/IMG_4871.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_4913.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam omnis quaerat molestiae, praesentium. Ipsam, reiciendis. Aut molestiae animi earum laudantium.</p>">
-                     <a href="#"><img src="images/Kids/IMG_4913.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Kids/IMG_4913.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_4922.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem reiciendis, dolorum illo temporibus culpa eaque dolore rerum quod voluptate doloribus.</p>">
-                     <a href="#"><img src="images/Kids/IMG_4922.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Kids/IMG_4922.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_4998.jpgg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis quae iusto omnis praesentium labore tempore eligendi quo corporis sapiente.</p>">
-                     <a href="#"><img src="images/Kids/IMG_4998.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_4998.jpgg">
+                     <a href="#"><img src="images/Kids/IMG_4998.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5140.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, voluptatum voluptate tempore aliquam, dolorem distinctio. In quas maiores tenetur sequi.</p>">
-                     <a href="#"><img src="images/Kids/IMG_5140.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5140.jpg">
+                     <a href="#"><img src="images/Kids/IMG_5140.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5337.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cum culpa blanditiis illum, voluptatum iusto quisquam mollitia debitis quaerat maiores?</p>">
-                     <a href="#"><img src="images/Kids/IMG_5337.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5337.jpg">
+                     <a href="#"><img src="images/Kids/IMG_5337.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5938.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores similique impedit possimus, laboriosam enim at placeat nihil voluptatibus voluptate hic!</p>">
-                     <a href="#"><img src="images/Kids/IMG_5938.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_5938.jpg">
+                     <a href="#"><img src="images/Kids/IMG_5938.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_6043.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam vitae sed cum mollitia itaque soluta laboriosam eaque sit ratione, aliquid.</p>">
-                     <a href="#"><img src="images/Kids/IMG_6043.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/Kids/IMG_6043.jpg">
+                     <a href="#"><img src="images/Kids/IMG_6043.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-6 item row justify-content-around" data-aos="fade" data-src="images/Kids/IMG_9412.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque officiis magnam, facilis nam eos perspiciatis eligendi pariatur numquam debitis quos!</p>">
-                     <a href="#"><img src="images/Kids/IMG_9412.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-6 item row justify-content-around" data-aos="fade">
+                     <a href="#"><img src="images/Kids/IMG_9412.jpg"  class="img-fluid"></a>
                   </div>
-                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-6 item row justify-content-around" data-aos="fade" data-src="images/Kids/IMG_9432.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quia illo voluptatibus numquam inventore, ab asperiores molestiae distinctio atque nihil.</p>">
-                     <a href="#"><img src="images/Kids/IMG_9432.jpg" alt="IMage" class="img-fluid"></a>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-6 item row justify-content-around" data-aos="fade">
+                     <a href="#"><img src="images/Kids/IMG_9432.jpg"  class="img-fluid"></a>
                   </div>
                </div>
             </div>
@@ -122,7 +122,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
                </p>
             </div>
          </div>
@@ -157,5 +157,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
