--- a/services.html
+++ b/services.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
    <head>
       <title>Aditya Bansal &mdash; Photographer   
       </title>
@@ -130,7 +129,7 @@
          <div class="footer py-4">
             <div class="container-fluid text-center">
                <p>
-                Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.instagram.com/anugrahbhatt/" target="_blank">Anugrah Bhatt</a>
+                  Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="">Aditya Bansal</a>
               </p>
             </div>
          </div>
@@ -165,5 +164,4 @@
          gtag('config', 'UA-23581568-13');
       </script>
    </body>
-   <!-- Mirrored from preview.colorlib.com/theme/photosen/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 01 Mar 2021 07:36:06 GMT -->
 </html>
