--- a/food.html
+++ b/food.html
@@ -134,6 +134,26 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
                      <a href="#"><img src="images/Food/IMG_0502.jpg" class="img-fluid"></a>
                   </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
+                     <a href="#"><img src="images/Food/3.1.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
+                     <a href="#"><img src="images/Food/6.1.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
+                     <a href="#"><img src="images/Food/36.3.jpg" class="img-fluid"></a>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item mx-auto" data-aos="fade" data-src="images/Food/IMG_0502.jpg">
+                     <a href="#"><img src="images/Food/38.4.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mx-auto" data-aos="fade">
+                     <video src="./images/Food/122643256_547078523547123_1038105927101041142_n.mp4" playsinline autoplay muted loop class="img-fluid"></video>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mx-auto" data-aos="fade">
+                     <video src="./images/Food/318710903_118529527732964_7393819627185762727_n.mp4" playsinline autoplay muted loop class="img-fluid"></video></a>
+                  </div>
                </div>
             </div>
          </div>
@@ -159,6 +179,7 @@
       <script src="js/aos.js"></script>
       <script src="js/picturefill.min.js"></script>
       <script src="js/lightgallery-all.min.js"></script>
+      <script src="https://www.jsdelivr.com/package/npm/lg-video"></script>
       <script src="js/jquery.mousewheel.min.js"></script>
       <script src="js/main.js"></script>
       <script>
