--- a/products.html
+++ b/products.html
@@ -108,6 +108,27 @@
                   <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
                      <a href="#"><img src="images/Products/IMG_8659.jpg" class="img-fluid"></a>
                   </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/IMG_1824.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/molik orange 2.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/molik blue 1.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/IMG_8659.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/IMG_1874.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/IMG_1774.jpg" class="img-fluid"></a>
+                  </div>
+                  <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade">
+                     <a href="#"><img src="images/Products/molik charcoal 1.jpg" class="img-fluid"></a>
+                  </div>
                </div>
             </div>
          </div>
